<resources>
    <string name="app_name">Word Practice</string>
    <string name="prefSharedPref" translatable="false">prefSharedPref</string>
    <string name="prefWordDelay" translatable="false">prefWordDelay</string>
    <string name="prefLineDelay" translatable="false">prefLineDelay</string>
    <string name="prefRepeatNum" translatable="false">prefRepeatNum</string>
    <string name="prefPitch0" translatable="false">prefPitch0</string>
    <string name="prefPitch1" translatable="false">prefPitch1</string>
    <string name="prefSpeechRate0" translatable="false">prefSpeechRate0</string>
    <string name="prefSpeechRate1" translatable="false">prefSpeechRate1</string>
    <string name="prefSoundVolume0" translatable="false">prefSoundVolume0</string>
    <string name="prefSoundVolume1" translatable="false">prefSoundVolume1</string>
    <string name="prefLanguage0" translatable="false">prefLanguage0</string>
    <string name="prefLanguage1" translatable="false">prefLanguage1</string>
    <string name="prefTextSize0" translatable="false">prefTextSize0</string>
    <string name="prefTextSize1" translatable="false">prefTextSize1</string>
    <string name="prefHasListBackground" translatable="false">prefHasListBackground</string>
    <string name="prefRepeatAtEnd" translatable="false">prefRepeatAtEnd</string>
    <string name="prefDefaultFile" translatable="false">prefDefaultFile</string>
    <string name="prefSelectedFiles" translatable="false">prefSelectedFiles</string>
    <string name="prefLockOrientation" translatable="false">prefLockOrientation</string>
    <string name="prefIsSingleLineMode" translatable="false">prefIsSingleLineMode</string>
    <string name="loadExamples">Load examples</string>
    <string name="settingsMenu">Settings</string>
    <string name="helpMenu">Help</string>
    <string name="rateAppMenu">Rate this app</string>
    <string name="shareAppMenu">Share this app</string>
    <string name="aboutMenu">About</string>
    <string name="okText">OK</string>
    <string name="saveButton">Save</string>
    <string name="loadButton">Load</string>
    <string name="saveDialogTextView">Please enter a file name</string>
    <string name="cancelButton">Cancel</string>
    <string name="noWritePermissionErr">Error: no storage \nwrite permission. \nList is NOT saved!</string>
    <string name="saveListText">Word lists are saved to %s.txt.</string>
    <string name="fileLoadSuccess">%s is loaded.</string>
    <string name="fileFormatErr">%s is not a correct word lists file!</string>
    <string name="lang0TextView">Language 1</string>
    <string name="lang1TextView">Language 2</string>
    <string name="speechRateTextView">Speech rate</string>
    <string name="volumeTextView">Volume</string>
    <string name="pitchTextView">Pitch</string>
    <string name="wordDelayTextView">"Delay between words: "</string>
    <string name="lineDelayTextView">"Delay between lines: "</string>
    <string name="repeatNumTextView">"Repeat how many times: "</string>
    <string name="textSizeTextView">Text size (18–48)</string>
    <string name="listBackgroundTextView">Multi-color background</string>
    <string name="clearButton">Clear both word lists</string>
    <string name="clearListToast">Both word lists are cleared.</string>
    <string name="resetButton">Reset all settings to default</string>
    <string name="emptyListErr">Please enter some words to the lists!</string>
    <string name="unequalLengthErr">Warning: the lists are not equal in length!</string>
    <string name="finishButton">Done</string>
    <string name="editButton">Edit</string>
    <string name="editText0Hint">Please \nenter \nthe word \nlist for \nlanguage \n1 here.</string>
    <string name="editText1Hint">Please \nenter \nthe word \nlist for \nlanguage \n2 here.</string>
    <string name="pickLanguage0Title">Please choose language 1</string>
    <string name="pickLanguage1Title">Please choose language 2</string>
    <string name="repeatAtEndTextView">At the end of the list:</string>
    <string name="doNothingButton">do nothing</string>
    <string name="repeatButton">repeat from the beginning</string>
    <string name="playNextFileButton">play next file</string>
    <string name="playRandomFileButton">play random file</string>
    <string name="exampleTitle">Please select example lists:</string>
    <string name="endOfListToast">This is the end of the list.</string>
    <string name="selectFileButton">Select files</string>
    <string name="fileNotFoundErr">File not found: %s!</string>
    <string name="noReadPermissionErr">Error: no storage \nread permission.</string>
    <string name="noFilesErr">No .txt file found in the Documents directory!</string>
    <string name="languageNotSupportedErr">%s is not supported by the text-to-speech engine! Please install one that supports and select it on the settings page.</string>
    <string name="selectFileDialogTitle">Please select files that will be played:</string>
    <string name="shareMessageText">Word Practice\nA great tool to help you memorize the pronunciation of words of new languages!\n</string>
    <string name="chooseAppText">Please choose the way you want to share the app</string>
    <string name="displayMode">Display mode</string>
    <string name="lockOrientationTextView">Lock screen orientation when playing</string>
    <string name="normalListToast">Display mode: normal lists</string>
    <string name="singleLineToast">Display mode: single line</string>
    <string name="egNumber">Numbers</string>
    <string name="egCEColor">Chinese vs English (Color)</string>
    <string name="egJEColor">Japanese vs English (Color)</string>
    <string name="egCEBody">Chinese vs English (Body parts)</string>
    <string name="egJEBody">Japanese vs English (Body parts)</string>
    <string name="egCEDate"><![CDATA[Chinese vs English (Date & time)]]></string>
    <string name="egJEDate"><![CDATA[Japanese vs English (Date & time)]]></string>
    <string name="egCEPosition"><![CDATA[Chinese vs English (Position & direction)]]></string>
    <string name="egJEPosition"><![CDATA[Japanese vs English (Position & direction)]]></string>
    <string name="egCETransportation">Chinese vs English (Transportation)</string>
    <string name="egJETransportation">Japanese vs English (Transportation)</string>
    <string name="egCEFood">Chinese vs English (Food)</string>
    <string name="egJEFood">Japanese vs English (Food)</string>
    <string name="egCEConversation">Chinese vs English (Conversation)</string>
    <string name="egJEConversation">Japanese vs English (Conversation)</string>
    <string name="cnExampleColor">紅色\n橙色\n黃色\n綠色\n藍色\n紫色\n黑色\n白色\n灰色\n棕色\n粉紅色</string>
    <string name="cnExampleBody">頭\n眼睛\n眉毛\n耳朵\n鼻子\n口\n牙齒\n臉頰\n前額\n頭髮\n頸部\n身體\n肚子\n肩膀\n手臂\n手\n手指\n大腿\n腳</string>
    <string name="cnExampleDate">星期天\n星期一\n星期二\n星期三\n星期四\n星期五\n星期六\n一月\n二月\n三月\n四月\n五月\n六月\n七月\n八月\n九月\n十月\n十一月\n十二月\n早上\n中午\n下午\n黃昏\n晚上\n年\n月\n週\n日\n小時\n分鐘\n秒</string>
    <string name="cnExamplePosition">上\n下\n左\n右\n中間\n前方\n後方\n裡面\n外面\n附近\n旁邊\n東\n南\n西\n北</string>
    <string name="cnExampleTransportation">自行車\n汽車\n公共汽車\n出租車\n地鐵\n火車\n高速鐵路\n火車站\n船\n飛機\n機場\n票\n行李</string>
    <string name="cnExampleFood">食物\n早餐\n午餐\n晚餐\n肉\n魚\n菜\n蛋\n飯\n麵\n麵包\n水果\n飲料\n水\n茶\n牛奶\n果汁\n咖啡\n酒\n啤酒</string>
    <string name="cnExampleConversation">早安\n午安\n晚安\n你好嗎\n謝謝\n拜託你了\n不好意思\n對不起\n等一等\n再見\n麻煩結帳\n不好意思，請問火車站在哪裡？\n不好意思，請問附近有廁所嗎？</string>
    <string name="helpText01">Thanks for using Word Practice!\n\n</string>
    <string name="generalTextView">General</string>
    <string name="helpText02">"\nTo begin, you can click the three dots at the top right corner and choose "</string>
    <string name="helpText03">", copy and paste word lists you had found, or type the words directly. (If you copy and paste or type directly, remember to click ~"</string>
    <string name="helpText04">" when you are done.)\n\nYou can save the lists by clicking the ~"</string>
    <string name="helpText05">" button. Click the ~"</string>
    <string name="helpText06">" button to load any previously saved list. The lists are saved in .txt format files which can be edited with text editors. When editing the files, make sure you do not change the keywords "</string>
    <string name="helpText06b" translatable="false">"&lt;LANGUAGE_1&gt;"</string>
    <string name="helpText06c">", "</string>
    <string name="helpText06d" translatable="false">"&lt;1&gt;"</string>
    <string name="helpText06e">", "</string>
    <string name="helpText06f" translatable="false">"&lt;LANGUAGE_2&gt;"</string>
    <string name="helpText06g">", and "</string>
    <string name="helpText06h" translatable="false">"&lt;2&gt;"</string>
    <string name="helpText06i">". Otherwise, the app will fail to load the files.\n\n"</string>
    <string name="helpText07">"\nClick the "</string>
    <string name="helpText08">" button at the bottom to start playing. You can also click the words on the list to start playing at that line. Click the "</string>
    <string name="helpText09">" to pause and "</string>
    <string name="helpText10">" to stop.\n\nYou can click the language buttons at the top to choose what languages to speak. You can also set the speed of the speech, duration of the time delay between words, how many times to repeat each word, etc. on the "</string>
    <string name="helpText11">" page. Click the three dots at the top right corner and choose "</string>
    <string name="helpText12">" to open it.\n\n"</string>
    <string name="tipsText">Tips</string>
    <string name="helpText13">\nThe app uses your device\'s Text-to-Speech engine to produce the sound of the words. If you are in doubt about the pronunciation of certain words, please consult other reliable sources for clarification. If you find the quality of the voice unacceptable in general, consider installing a new engine. If the language you want is not supported by the current engine, you also need to install a new one. Remember to select the correct engine on the settings page of your device and restart the app afterward.\n\n</string>
    <string name="helpText13b">Some engine may require you to download the language data files on the settings page of your device first to have it works properly.\n\n</string>
    <string name="helpText14">"Some languages may have several pronunciations for the same word. For example, the Japanese word 内 can be pronounced as うち or ない. You can tell the app which pronunciation to use by using "</string>
    <string name="helpText14b" translatable="false">"( )"</string>
    <string name="helpText14c">" or "</string>
    <string name="helpText14d" translatable="false">"（ ）"</string>
    <string name="helpText14e">" to enclose the preferred pronunciation. For example, entering 内（うち）to the list will tell the app to pronounce うち.\n\n</string>
    <string name="helpText15">"When practicing sentences, the lists may not be able to display the whole sentences. In that case, you can press ~"</string>
    <string name="helpText16">" at the top right corner to turn on the single-line mode. In this mode, only the words/sentences of the active line of the two languages are displayed using the whole screen. This makes sure the whole sentence can be seen.\n\n"</string>
</resources>